--- a/template/views/about.hbs
+++ b/template/views/about.hbs
@@ -8,6 +8,7 @@
     <body>
          <div class="main-content">
                 {{>header}}
+            <p>This site was created by Software Developer. It uses data from mapbox.com and darksky.net!</p>
             <img class="potrait" src="img/download.png"/>
          </div>
             
